--- a/re_Regular_Expression/1_regular_rexpression_re_.ipynb
+++ b/re_Regular_Expression/1_regular_rexpression_re_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1_regular_rexpression_re_.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPo5gZ1i/EGgYJuTeL+v8Za",
+      "authorship_tag": "ABX9TyPpVyBdeUPADg3K7IDgJoI6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
         "id": "2Iq1QQF7HlK8"
       },
       "source": [
-        "# Regular Expression"
+        "# Regular Expression re_Regular_Expression"
       ]
     },
     {
@@ -79,8 +79,8 @@
         "id": "uWWE7XIjInYM"
       },
       "source": [
-        "###3. $\r\n",
-        "    It matches end of the string"
+        "###3. ($)\r\n",
+        "    $ matches end of the string"
       ]
     },
     {
