--- a/re_Regular_Expression/1_regular_rexpression_re_.ipynb
+++ b/re_Regular_Expression/1_regular_rexpression_re_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1_regular_rexpression_re_.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSwXzz1gwYwiaWH9MUZD7W",
+      "authorship_tag": "ABX9TyOQTIGhDOPPPWoWYOq/4u7A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,8 +79,8 @@
         "id": "uWWE7XIjInYM"
       },
       "source": [
-        "### 3. '$'\r\n",
-        "    $ **matches** end of the string"
+        "###3. $\r\n",
+        "    $ matches end of the string"
       ]
     },
     {
