--- a/Tensorflow/TensorflowPrac19_GAN.ipynb
+++ b/Tensorflow/TensorflowPrac19_GAN.ipynb
@@ -6,7 +6,7 @@
       "name": "TensorflowPrac19_GAN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPL5SsRPbAKjTtoU9cZR35+",
+      "authorship_tag": "ABX9TyODyEH8umNfjfrFeFzu/PLQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Vinaypatil-Ev/vinEvPy-GoCoLab/blob/main/Tensorflow/TensorflowPrac19_GAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3dqDm4JM4ux3"
+      },
+      "source": [
+        "# GAN generative adversarial network"
       ]
     },
     {
